# sitetester

./: .gitignore  README.md  pyproject.toml  sitemap.html
pages/: homepage.py  links.py
tests/: conftest.py  test_homepage.py  test_sitemaptester.py
