[tool.poetry]
name = "sitemaptester"
version = "0.1.0"
description = ""
authors = ["Joseph Bettenhausen <jbettenh@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
pytest-html = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
